# case-study-5

./: .gitignore  README.md  StructureSummary.txt
pe-org-air-platform/: .env.example  .gitignore  API_DOCS.md  Dockerfile  REFACTOR_PLAN.md  TODO.md  TechDebt.txt  _tmp_cs5_extracted.txt  checklist.md  cs5.md  cs5_mockup.html  plan.md  plan_cs5_final.md  plan_v2.md  pyproject.toml  requirements.txt  streamlit_plan.md  test_e2e.py  test_mcp_tools.py
pe-org-air-platform/LP Letter/: lp_letter_PE-FUND-I.docx
pe-org-air-platform/app/: main.py
pe-org-air-platform/app/agents/: __init__.py  memory.py  specialists.py  state.py  supervisor.py  test_specialists.py  test_supervisor.py
pe-org-air-platform/app/clients/: __init__.py  base.py
pe-org-air-platform/app/config/: __init__.py  company_mappings.py  retrieval_settings.py
pe-org-air-platform/app/core/: __init__.py  dependencies.py  errors.py  exceptions.py  lifespan.py  logging_config.py  settings.py
pe-org-air-platform/app/database/: scoring_runs_schema.sql
pe-org-air-platform/app/mcp/: __init__.py  server.py  test_mcp.py
pe-org-air-platform/app/middleware/: correlation.py
pe-org-air-platform/app/models/: dimension.py  enumerations.py  evidence.py
pe-org-air-platform/app/pipelines/: __init__.py  board_analyzer.py  board_io.py  chunking.py  document_parser.py  glassdoor_collector.py  job_signals.py  leadership_analyzer.py  patent_signals.py  sec_edgar.py  tech_signals.py
pe-org-air-platform/app/prompts/: rag_prompts.py
pe-org-air-platform/app/repositories/: assessment_snapshot_repository.py  base.py  chunk_repository.py  company_repository.py  composite_scoring_repository.py  document_repository.py  health_repository.py  scoring_repository.py  signal_repository.py
pe-org-air-platform/app/routers/: analyst_notes.py  bonus.py  common.py  companies.py  config.py  dimensionScores.py  dimension_scores.py  documents.py  due_diligence.py  evidence.py  health.py  history.py  hr_scoring.py  orgair_scoring.py  portfolios.py  position_factor.py  rag.py  scoring.py  signals.py  tc_vr_scoring.py
pe-org-air-platform/app/schemas/: __init__.py  evidence.py  portfolio.py  scoring.py
pe-org-air-platform/app/scoring/: evidence_mapper.py
pe-org-air-platform/app/scripts/: collect_evidence.py  fill_sectors.py  recalc_culture.py  reingest_10k.py  seed_history.py
pe-org-air-platform/app/services/: __init__.py  base_signal_service.py  board_composition_service.py  cache.py  composite_scoring_service.py  culture_signal_service.py  document_collector.py  (+12 more)
pe-org-air-platform/streamlit/: cs5_app.py
pe-org-air-platform/test_results/: test_results.xml
pe-org-air-platform/tests/: test_e2e.py  test_mcp_integration.py  test_mcp_tools.py  test_models.py  test_signals.py  test_smoke.py
(+50 files in other folders)
